Made the upper left logo clickable to go to the home page and did a small cleanup on some layout issues in the header.

--- a/view/static/less/style.less
+++ b/view/static/less/style.less
@@ -37,6 +37,10 @@ body {
 		height: 100%;
 		margin: 0;
 
+		a.image-link {
+				display: inline-block;
+		}
+
 		section.main.fixed-width {
 				background: @theme-main-background-color;
 				color: @theme-main-foreground-color;
@@ -82,6 +86,7 @@ body {
 								display: inline-block;
 								list-style-type: none;
 								vertical-align: bottom;
+								margin: 0;
 								margin-bottom: 10px;
 								padding-left: 0;
 								overflow: hidden;
